[FEAT]:add header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="nav">
+            <div class="container">
+                <div class="nav__wrapper">
+                    <a href="">
+                        <img src="./static/svg/logo-removebg 1 (1).svg" alt="Logo">
+                    </a>
+                    
+                    <div class="nav__right-wrapper">
+                        <ul class="nav__menus">
+                            <li> 
+                                <a href="Services.html">Services</a>
+                            </li>
+                            <li>
+                                <a href="Portfolio.html">Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="About us.html">About us</a>
+                            </li>
+                        </ul>
+                        <div class="nav__lang">
+                            <span>Uz</span>
+                            <span>RU</span>
+                            <span>En</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
