--- a/index.html
+++ b/index.html
@@ -40,5 +40,44 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <h2 class="title">Design services</h2>
+        </div>
+        <div>
+            <div class="main__cards">
+                <div class="main__card">
+                    <p class="card__title">App design</p>
+                    <p class="card__desc">An effective process, method, and offers <br> to cover your daily basis needs with the <br> app</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+                <div class="main__card">
+                    <p class="card__title">Web design</p>
+                    <p class="card__desc">With competition getting only fierce, <br> compiling the latest trends at regular <br> intervals becomes inevitable.</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+                <div class="main__card">
+                    <p class="card__title">Ux &Ui design</p>
+                    <p class="card__desc">Among the top UI design trends for <br> 2022, 3D illustrations seem to have</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+                <div class="main__card">
+                    <p class="card__title">App design</p>
+                    <p class="card__desc">An effective process, method, and offers <br> to cover your daily basis needs with the <br> app</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+                <div class="main__card">
+                    <p class="card__title">Web design</p>
+                    <p class="card__desc">With competition getting only fierce, <br> compiling the latest trends at regular <br> intervals becomes inevitable.</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+                <div class="main__card">
+                    <p class="card__title">Ux &Ui design</p>
+                    <p class="card__desc">Among the top UI design trends for <br> 2022, 3D illustrations seem to have</p>
+                    <button class="btn btn blue-btn">Read more <img src="./static/svg/Vector (3).svg" alt=""></button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
